--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Library App</title>
 </head>
-<body class="bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 min-h-screen flex justify-center items-center">
+<body class="bg-gradient-to-tr from-teal-400 to-teal-600 via-teal-500 min-h-screen flex justify-center items-center">
   <div class="container mx-auto p-4 bg-white rounded-lg shadow-lg w-96">
     <h1 class="text-3xl font-semibold mb-4 text-center text-gray-800">My Library</h1>
     <button id="new-book" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded w-full mb-4">NEW BOOK</button>
